<resources>
    <string name="app_name">Student Virtual Assistant</string>
    <string name="title_activity_login_design">LoginDesign</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">login</string>


    <string name="domain">Spinner</string>
    <string-array name="domain_items">
        <item>Computer-Science</item>
        <item>Aerospace-Aeronautical</item>
        <item>Information Technology</item>
        <item>Electronics and Telecommunications</item>
        <item>Mechanical</item>
        <item>Mechatronics</item>
    </string-array>


    <string name="string"><![CDATA[<-]]></string>
    <string name="string2"><![CDATA[->]]></string>
    <string name="weekly">Weekly</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="strings"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <string name="navigation_drawer_open">Open SideBar</string>
    <string name="navigation_drawer_close">Close SideBar</string>

</resources>